# KYC-Anomaly-Monitoring

./: Project Description
KYC_anomoly_project/: README.md  pyproject.toml
KYC_anomoly_project/configs/: sample_config.json
KYC_anomoly_project/data/: sample_flows.csv
KYC_anomoly_project/examples/: generate_sample_data.py  run_sample.py
KYC_anomoly_project/output/: alerts.csv  anomaly_scores.csv  kyc_anomaly_report.md
KYC_anomoly_project/src/kyc_anomaly_monitoring/: __init__.py  cli.py  config.py  data_io.py  features.py  pipeline.py  reporting.py  scoring.py
KYC_anomoly_project/src/kyc_anomaly_monitoring/detectors/: baseline.py  rolling.py  time_change.py
KYC_anomoly_project/tests/: test_pipeline.py
