[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kyc-anomaly-monitoring"
version = "0.1.0"
description = "KYC anomaly detection for cross-border financial flows using baseline, rolling-window, and time-based change detection."
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0"
]

[tool.setuptools.packages.find]
where = ["src"]
